Test Sandbox Project/src/objects/SFPS_SCS_Post_Tag__c.object
<CustomObject>
    <description>Social Customer Service Post Tag attributes</description>
    <fields>
        <fullName>Attr1__c</fullName>
        <description>Mapping for Custom Attribute 1</description>
        <label>Attr1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attr2__c</fullName>
        <description>Mapping from post tag to custom attribute 2</description>
        <label>Attr2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attr3__c</fullName>
        <description>Post Tag Mapping to Attribute 3</description>
        <label>Attr3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoters</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Detractors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag_Importance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Tag Importance field allows administrator to set priority between tags. In case more than one tag in the social post tag field have impact on the same post attribute, the tag with higher importance value wins. Allowed value 0~99; default to 0</description>
        <label>Tag Importance</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SCS Post Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag_Importance__c</columns>
        <columns>Priority__c</columns>
        <columns>Influence__c</columns>
        <columns>NPS__c</columns>
        <columns>Language__c</columns>
        <columns>Attr1__c</columns>
        <columns>Attr2__c</columns>
        <columns>Attr3__c</columns>
        <columns>Attr4__c</columns>
        <columns>Attr5__c</columns>
        <columns>Attr6__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Post Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCS Post Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>